<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textSize="@dimen/icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/et_key_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/edit_text" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/hint_required"
            android:maxLength="32"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/et_key_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/phone_num"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/edit_text" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/hint_not_required"
            android:maxLength="32"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/edit_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/et_key_width"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/edit_text" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@null"
        android:hint="@string/hint_not_required"
        android:maxLength="32"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorHint"
        android:textSize="@dimen/edit_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:maxLength="32"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/edit_text" />

        <CheckBox
            android:id="@+id/cb_show_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textSize="@dimen/btn_text" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|end"
            android:padding="5dp"

            android:text="已有账号"
            android:textSize="@dimen/btn_text" />
    </LinearLayout>
</LinearLayout>